# hyperparticle

./: .gitignore  README.md  Tutorial.ipynb  data  data_handler.py  embedding.py  environment.yml  script.py  setup.cfg  test.ipynb  tree.py
data_generation/: make_dataset.py  make_hadronise.py  make_shower.py  p2.cmnd  pythia-settings.cmnd  slurm-1769115.out  sub.sh
hyperparticle/: data_handler.py  embedding.py  jet_angularities.py  online_script.py  script.py  tree.py
hyperparticle/data_generator/: duplicates.py  make_dataset.py  make_hadronise.py  make_shower.py  p2.cmnd  slurm-2324653.out  sub.sh  sub_hadron.sh  sub_shower.sh
hyperparticle/utils/: metrics.py  transform.py
notebooks/: Tutorial.ipynb  test.ipynb
utils/: metrics.py  visualisation.py
