[metadata]
name = hyperparticle
author = Giorgio Cerro
author_email = g.cerro@soton.ac.uk
description = Analysis hierarchical structure of particles in the Hyperbolic space.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GiorgioCerro/hyperparticle
classifiers = 
    Programming Language :: Python :: 3
    #License :: OSI Approved :: BSD License
    Operating System :: OS Indipendent

[options]
packages = hyperparticle
python_requires = >= 3.8
install_requires = 
    numpy >= 1.8.0
    

